# gccsdk

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  STATUS-BRANCH  area.c  area.h  asm.c  build-world  code.c  commands.c  create-gcckit  create-riscpkg  decode.c  error.c  eval.c  expr.c  filestack.c  help_cop.c  include.c  input.c  input.h  install-env  lex.c  lexAcorn.c  lit.c  local.c  local.h  m_cpuctrl.c  m_cpumem.c  macros.c  main.c  output.c  put.c  riscpkg-versions  setup-gccsdk-params  symbol.c  symbol.h  variables.c
autobuilder/: .gitignore
autobuilder/libraries/libcroco3/: .gitignore
autobuilder/libraries/libharu/: .gitignore
autobuilder/libraries/libpthread-stubs0-dev/: .gitignore
cmunge/: Makefile,fe1
developers/joty/asasm-twopass/: ChangeLog  asm.c  code.c  commands.c  error.c  eval.c  filestack.c  filestack.h  input.c  input.h  lex.c  lex.h  lexAcorn.c  local.c  local.h  macros.c  macros.h  main.c  riscos_c.c  symbol.c  whileif.c
developers/joty/gcc47/: Makefile  README  setup-gccsdk-params
gcc/: .gitignore  Makefile.in  README  configure.in
gcc/gcc/gcc/: .gitignore  Makefile.in  cpperror.c  cse.c  final.c  flow.c  fold-const.c  function.c  hconfig.h  jump.c  libgcc2.c  multilib.h  reload1.c  rtl.h  stor-layout.c  toplev.c  version.c
gcc/gcc/libio/: fileops.c  ioseekpos.c
gcc/gcc/libstdc/: Makefile
gcc/libscl/: stdio.h  stubs.s
gcc/libscl/stdio/: fdopen.c
gcc/riscos-aof/as/: decode.c  macros.c
gcc/riscos-aof/drlink/: areas.c
gcc/riscos-aof/libfile/: Buffer.cc
gcc/riscos-dist/: !Help  Changes  Makefile
gcc/riscos-dist/docs/: Intro
gcc/riscos-progs/bison/: .gitignore
gcc/riscos-progs/flex/: .gitignore
gcc/unixlib/: .gitignore
gcc/unixlib/Docs/: Changelog
gcc/unixlib/objs/: .gitignore  Makefile,fe1
gcc/unixlib/source/: .gitignore  alloc.c  assert.c  bsearch.c  ctypeproc.c  div.c  qsort.c  strsignal.c  strtol.c  strtoul.c  termcap.c
gcc4/: .gitignore
gcc4/riscos/ln/: .gitignore
gcc4/riscos/mkresfs/: .gitignore
recipe/files/gcc/libunixlib/: .gitignore  ChangeLog  ChangeLog-SCL  Makefile.am  configure.ac  gen-auto.pl
recipe/files/gcc/libunixlib/crt/: crt0-scl.s
recipe/files/gcc/libunixlib/gcccompat/: _eh_support.s
recipe/files/gcc/libunixlib/incl-local/internal/: asm_dec.s
recipe/files/gcc/libunixlib/include/: ctype.h  errno.h  kernel.h  signal.h  stdio.h  stdlib.h  unistd.h
recipe/files/gcc/libunixlib/include/bits/: signum.h
recipe/files/gcc/libunixlib/include/unixlib/: .gitignore  types.h
recipe/files/gcc/libunixlib/kernel/: koserror.c
recipe/files/gcc/libunixlib/netlib/: scl_getservbyname.c  scl_getservbyport.c
recipe/files/gcc/libunixlib/pthread/: _context.s
recipe/files/gcc/libunixlib/scl/: chunkid02.s
recipe/files/gcc/libunixlib/signal/: _signal.s
recipe/files/gcc/libunixlib/sys/: errlist.c
recipe/files/gcc/libunixlib/test/: Makefile.am
recipe/files/gcc/libunixlib/test/assert/: Makefile.am
recipe/files/gcc/libunixlib/test/basic/: Makefile.am
recipe/files/gcc/libunixlib/test/dirent/: Makefile.am
recipe/files/gcc/libunixlib/test/env/: Makefile.am
recipe/files/gcc/libunixlib/test/filename/: Makefile.am
recipe/files/gcc/libunixlib/test/grp/: Makefile.am
recipe/files/gcc/libunixlib/test/math/: Makefile.am
recipe/files/gcc/libunixlib/test/process-redirect/: Makefile.am
recipe/files/gcc/libunixlib/test/pthread/: Makefile.am
recipe/files/gcc/libunixlib/test/scl/: Makefile.am
recipe/files/gcc/libunixlib/test/setjmp/: Makefile.am
recipe/files/gcc/libunixlib/test/stdio/: Makefile.am
recipe/files/gcc/libunixlib/test/stdlib/: Makefile.am
recipe/files/gcc/libunixlib/test/string/: Makefile.am
recipe/files/gcc/libunixlib/test/strings/: Makefile.am
recipe/files/gcc/libunixlib/test/sys/: Makefile.am
recipe/files/gcc/libunixlib/test/unix/: Makefile.am
recipe/files/gcc/libunixlib/time/: broken.c
recipe/files/gcc/libunixlib/unix/: dev.c  fcntl.c  select.c  unix.c
recipe/files/libunixlib/: ChangeLog
recipe/patches/: gcc.version.c.p
recipe/patches/binutils/: bfd.elf32-arm.c.p  binutils.readelf.c.p  ld.scripttempl.elf.sc.p
recipe/patches/gcc/: Makefile.def.p  Makefile.tpl.p  configure.ac.p  gcc.ada.adaint.c.p  gcc.ada.adaint.h.p  gcc.ada.env.c.p  gcc.ada.gcc-interface.Makefile.in.p  gcc.builtins.c.p  gcc.collect2.c.p  gcc.config.arm.arm-protos.h.p  gcc.config.arm.arm.c.p  gcc.config.arm.arm.h.p  gcc.config.arm.arm.md.p  gcc.config.arm.arm.opt.p  gcc.config.arm.elf.h.p  gcc.config.arm.lib1funcs.asm.p  gcc.config.arm.unwind-arm.c.p  gcc.config.arm.unwind-arm.h.p  gcc.config.gcc.p  gcc.config.host.p  gcc.crtstuff.c.p  gcc.defaults.h.p  gcc.doc.invoke.texi.p  gcc.doc.options.texi.p  gcc.dwarf2cfi.c.p  gcc.dwarf2out.c.p  gcc.function.c.p  gcc.gcc.c.p  gcc.incpath.c.p  gcc.ira.c.p  gcc.optc-gen.awk.p  gcc.opth-gen.awk.p  gcc.opts-common.c.p  gcc.toplev.c.p  gcc.unwind-dw2.c.p  gcc.version.c.p  libgcc.Makefile.in.p  libgcc.config.arm.libunwind.S.p  libgcc.config.arm.unwind-arm.c.p  libgcc.config.arm.unwind-arm.h.p  (+17 more)
recipe/patches/libunixlib/: configure.template.p  gen-auto.pl.p  gmon.gmon-start.c.p  sys._syslib.s.p
recipe/patches/svn-llvm-clang/: tools.clang.tools.driver.driver.cpp.p
recipe/patches/svn-llvm-gcc/: Makefile.def.p  Makefile.tpl.p  configure.in.p  gcc.Makefile.in.p  libstdc++-v3.crossconfig.m4.p
recipe/scripts/gcc/: reconf-libunixlib
regression/tests_pass/: if_else.s
release_2_95/gcc/: Makefile.in  README  configure.in
release_3_4_4_v2_stable/gcc/: README
release_3_4_6/gcc/: README  configure.in
release_3_4_6/gcc/riscos-aof/drlink/tests/common/: Makefile.am  test_comdef.s  test_common.s  test_main.s
release_4_1_1/: .gitignore
release_4_1_2/: Makefile  README  build-world  create-gcckit  riscpkg-versions  setup-gccsdk-params
release_4_1_2/riscos/: build-it
riscos/: build-it
riscos/asasm/: .gitignore  local.h
riscos/cmunge/: .gitignore  readfile.c
riscos/elf2aif/: .gitignore
riscos/gdbserver/: .gitignore
riscos/syslogd/: .gitignore
scripts/: do-patch  do-softlink-dir
src/: .gitignore
tools/decaof/: .gitignore
(+693 files in other folders)
